# Side-ls

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
Side-ls/: CMakeLists.txt  Filesystem-impl.cpp  Filesystem.cppm  Format-impl.cpp  Format.cppm  Makefile  Side-ls  Tools.cxx  main.cpp
src/: CMakeLists.txt  CommandFactory.cpp  CommandFactory.hpp  Filesystem.cpp  Filesystem.hpp  Format.cpp  Format.hpp  LongListingCommand.hpp  Option.hpp  Options.hpp  ProgramOptions.cpp  ProgramOptions.hpp  main.cpp
src/handlers/: CMakeLists.txt  CleanCommand.cpp  CleanCommand.hpp  CleanHandler.cpp  CleanHandler.hpp  Command.hpp  CommandFactory.cpp  CommandFactory.hpp  Handler.hpp  HandlerFactory.cpp  HandlerFactory.hpp  LongListingCommand.cpp  LongListingCommand.hpp  LongListingHandler.cpp  LongListingHandler.hpp  NormalListingHandler.cpp  NormalListingHandler.hpp
src/tools/: CMakeLists.txt  Filesystem.cpp  Filesystem.hpp  Format.cpp  Format.hpp
test/: CMakeLists.txt  CleanHandlerTest.cpp  ProgramOptionsTest.cpp  Test.cpp
test/handlers/: HandlerFactoryTest.cpp  LongListingHandlerTest.cpp  NormalListingHandlerTest.cpp
